src/objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>ApexJob_Id__c</fullName>
        <description>Storing the ID of Apex Job</description>
        <label>ApexJob Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <description>This field is used in report for overcome Standard Report Limit  :i.e. Time-stamp portion of the created date is not displayed in report</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Failed_Record_ID__c</fullName>
        <description>Capturing Failed Record Ids</description>
        <label>Failed Record ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <label>Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <description>Scheduled Batch Job ID</description>
        <label>Job ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isAbortLog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Log for Aborting Job</description>
        <label>isAbortLog</label>
        <type>Checkbox</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Instance__c</columns>
        <columns>Detail__c</columns>
        <columns>Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Job_ID__c</columns>
        <columns>Record_ID__c</columns>
        <columns>Created_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Custom</fullName>
        <columns>NAME</columns>
        <columns>Created_Time__c</columns>
        <columns>Instance__c</columns>
        <columns>Message__c</columns>
        <columns>Record_ID__c</columns>
        <columns>Detail__c</columns>
        <columns>Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_Time__c</field>
            <operation>greaterThan</operation>
            <value>6/21/2016 2:00 PM</value>
        </filters>
        <filters>
            <field>Created_Time__c</field>
            <operation>lessThan</operation>
            <value>6/21/2016 3:00 PM</value>
        </filters>
        <label>Custom</label>
    </listViews>
    <listViews>
        <fullName>Fritz</fullName>
        <columns>NAME</columns>
        <columns>Detail__c</columns>
        <columns>Instance__c</columns>
        <columns>Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Created_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/14/2016 12:00 AM</value>
        </filters>
        <label>Fritz</label>
    </listViews>
    <listViews>
        <fullName>SP057</fullName>
        <columns>NAME</columns>
        <columns>Job_ID__c</columns>
        <columns>Record_ID__c</columns>
        <columns>Instance__c</columns>
        <columns>Message__c</columns>
        <columns>Detail__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Created_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Instance__c</field>
            <operation>equals</operation>
            <value>SendQuotesToZuora2</value>
        </filters>
        <label>SP057</label>
    </listViews>
    <listViews>
        <fullName>Send_To_ZBilling</fullName>
        <columns>NAME</columns>
        <columns>Instance__c</columns>
        <columns>Detail__c</columns>
        <columns>Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Instance__c</field>
            <operation>contains</operation>
            <value>Zuora</value>
        </filters>
        <label>Send To ZBilling</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today_s_Log</fullName>
        <columns>NAME</columns>
        <columns>Instance__c</columns>
        <columns>Detail__c</columns>
        <columns>Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Job_ID__c</columns>
        <columns>Record_ID__c</columns>
        <columns>Created_Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today &apos;s Log</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>